# Brenda

./: .gitignore  CMakeLists.txt  Doxyfile  ECS_REFACTORING_COMPLETE.md  config.json  environment.json  fix_grass_conflicts.py  generate_grass.py  grass_sample.txt  grass_tiles.txt  insert_grass.py  remove_duplicates.py
docs/html/: AIManager_8h.html  AIManager_8h__dep__incl.map  AIManager_8h__dep__incl.md5  AIManager_8h__incl.map  AIManager_8h__incl.md5  AIManager_8h_source.html  AIState_8h.html  AIState_8h__dep__incl.map  AIState_8h__dep__incl.md5  AIState_8h__incl.map  AIState_8h__incl.md5  AIState_8h_source.html  AISystem_8cpp.html  AISystem_8cpp__incl.map  AISystem_8cpp__incl.md5  AISystem_8cpp_source.html  AISystem_8h.html  AISystem_8h__dep__incl.map  AISystem_8h__dep__incl.md5  AISystem_8h__incl.map  AISystem_8h__incl.md5  AISystem_8h_source.html  Circle_8h.html  Circle_8h__dep__incl.map  Circle_8h__dep__incl.md5  Circle_8h__incl.map  Circle_8h__incl.md5  Circle_8h_source.html  Clock_8cpp.html  Clock_8cpp__incl.map  Clock_8cpp__incl.md5  Clock_8cpp_source.html  Clock_8h.html  Clock_8h__dep__incl.map  Clock_8h__dep__incl.md5  Clock_8h__incl.map  Clock_8h__incl.md5  Clock_8h_source.html  ControllerManager_8h.html  ControllerManager_8h__dep__incl.map  (+680 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enumvalues_0.js  enumvalues_1.js  (+58 more)
src/: AISystem.cpp  AISystem.h  Clock.cpp  Clock.h  ECSTest.cpp  GeminiClient.cpp  GeminiClient.h  Grid.cpp  Grid.h  GridRenderer.h  HomeManager.h  Pathfinder.cpp  Pathfinder.h  Scene.cpp  Scene.h  TickManager.h  TiledParser.h  TimeOfDay.cpp  TimeOfDay.h  main.cpp
src/ECS/: AIManager.h  ComponentRegistry.cpp  ComponentRegistry.h  ControllerManager.cpp  ControllerManager.h  DescriptionComponentManager.h  ECS.h  Entity.cpp  Entity.h  EntityID.h  EntityManager.cpp  EntityManager.h  IComponent.h  IComponentManager.h  InfoBoxManager.cpp  InfoBoxManager.h  LegacyManagerAdapter.h  MigrationExample.h  MovementManager.cpp  MovementManager.h  PositionManager.cpp  PositionManager.h  RenderableManager.cpp  RenderableManager.h  SystemManager.cpp  SystemManager.h  World.cpp  World.h
src/ECS/components/: AIState.h  Circle.h  Controller.h  DescriptionComponent.h  IRenderable.h  InfoBoxComponent.h  Movement.h  PlayerController.cpp  PlayerController.h  PositionComponent.h  ShapeRenderableComponent.cpp  ShapeRenderableComponent.h  Square.h
src/ECS/systems/: MovementSystem.h
